// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack should render correctly with alignCenter 1`] = `
<DocumentFragment>
  .cache-1i7e9sg-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
    class="cache-1i7e9sg-Stack e1sgck4o0"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render correctly with default props 1`] = `
<DocumentFragment>
  .cache-11tw670-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
    class="cache-11tw670-Stack e1sgck4o0"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
    <div>
      third child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render correctly with row direction 1`] = `
<DocumentFragment>
  .cache-1jx9yod-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
    class="cache-1jx9yod-Stack e1sgck4o0"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
    <div>
      third child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render correctly with wrap as boolean 1`] = `
<DocumentFragment>
  .cache-1hg4n6q-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
    class="cache-1hg4n6q-Stack e1sgck4o0"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render correctly with wrap as string 1`] = `
<DocumentFragment>
  .cache-tao90g-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: wrap-reverse;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
}

<div
    class="cache-tao90g-Stack e1sgck4o0"
    wrap="wrap-reverse"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
  </div>
</DocumentFragment>
`;
